[gd_scene load_steps=12 format=3 uid="uid://rkuna7geh5u1"]

[ext_resource type="Script" path="res://scenes/vehicles/common/car/car_main/car_main.gd" id="1_6cwm7"]
[ext_resource type="PackedScene" uid="uid://cwdlhwdhu3mf0" path="res://scenes/vehicles/common/car/car_door/car_door.tscn" id="2_4leat"]
[ext_resource type="ArrayMesh" uid="uid://b7sghu72o4nj3" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Car_Body.res" id="2_dd1k4"]
[ext_resource type="ArrayMesh" uid="uid://dsikfakaln8o8" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Door_FL.res" id="4_1k2s1"]
[ext_resource type="PackedScene" uid="uid://cx5tiyarhaal4" path="res://scenes/vehicles/common/cameras/vehicle_cameras.tscn" id="4_t40ri"]
[ext_resource type="ArrayMesh" uid="uid://3puyqfpefdh0" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Door_RL.res" id="5_00jy5"]
[ext_resource type="ArrayMesh" uid="uid://2supf0lfkprt" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Door_FR.res" id="5_6lik4"]
[ext_resource type="ArrayMesh" uid="uid://dgg0otaxtu3yg" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Wheel_L.res" id="5_423n0"]
[ext_resource type="ArrayMesh" uid="uid://bxmr5cpk0fl6a" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Door_RR.res" id="6_7kfmn"]
[ext_resource type="ArrayMesh" uid="uid://cllsxarwvcvad" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Wheel_R.res" id="6_d06o3"]
[ext_resource type="PackedScene" uid="uid://rp712ic5ra7n" path="res://scenes/vehicles/common/car/car_wheel/car_wheel.tscn" id="8_ocx0m"]

[node name="CarMain" type="RigidBody3D"]
mass = 126.53
center_of_mass_mode = 1
linear_damp = 0.01
script = ExtResource("1_6cwm7")
car_body_mesh_resource = ExtResource("2_dd1k4")

[node name="CarBody" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_dd1k4")

[node name="DoorFLDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773, 0.816, -0.89)

[node name="DoorFL" parent="DoorFLDummy" instance=ExtResource("2_4leat")]
door_mesh_resource = ExtResource("4_1k2s1")
max_open_angle = -60.0
rotation_axis = 1

[node name="ExternalHandle" parent="DoorFLDummy/DoorFL" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.92172, 0.132569, -0.0205262)

[node name="DoorFRDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773, 0.816, 0.89)

[node name="DoorFR" parent="DoorFRDummy" instance=ExtResource("2_4leat")]
door_mesh_resource = ExtResource("5_6lik4")
door_location = 1
rotation_axis = 1

[node name="ExternalHandle" parent="DoorFRDummy/DoorFR" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.919763, 0.136131, 0.0119827)

[node name="DoorRLDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.307, 0.853, -0.913)

[node name="DoorRL" parent="DoorRLDummy" instance=ExtResource("2_4leat")]
door_mesh_resource = ExtResource("5_00jy5")
door_location = 2
max_open_angle = -60.0
rotation_axis = 1

[node name="ExternalHandle" parent="DoorRLDummy/DoorRL" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.825306, 0.150342, 0.0246125)

[node name="DoorRRDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.307, 0.853, 0.913)

[node name="DoorRR" parent="DoorRRDummy" instance=ExtResource("2_4leat")]
door_mesh_resource = ExtResource("6_7kfmn")
door_location = 3
rotation_axis = 1

[node name="ExternalHandle" parent="DoorRRDummy/DoorRR" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.825568, 0.161506, -0.0274591)

[node name="WheelFLDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.264, 0.347, -0.81)

[node name="WheelFL" parent="WheelFLDummy" instance=ExtResource("8_ocx0m")]
spring_stiffness = 15000.0
damper_stiffness = 500.0
wheel_mesh_resource = ExtResource("5_423n0")

[node name="WheelMesh" parent="WheelFLDummy/WheelFL" index="0"]
mesh = ExtResource("5_423n0")

[node name="WheelFRDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.264, 0.347, 0.81)

[node name="WheelFR" parent="WheelFRDummy" instance=ExtResource("8_ocx0m")]
spring_stiffness = 15000.0
damper_stiffness = 500.0
wheel_mesh_resource = ExtResource("6_d06o3")

[node name="WheelMesh" parent="WheelFRDummy/WheelFR" index="0"]
mesh = ExtResource("6_d06o3")

[node name="WheelRLDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.424, 0.347, -0.81)

[node name="WheelRL" parent="WheelRLDummy" instance=ExtResource("8_ocx0m")]
spring_stiffness = 15000.0
damper_stiffness = 500.0
wheel_mesh_resource = ExtResource("5_423n0")

[node name="WheelMesh" parent="WheelRLDummy/WheelRL" index="0"]
mesh = ExtResource("5_423n0")

[node name="WheelRRDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.424, 0.347, 0.81)

[node name="WheelRR" parent="WheelRRDummy" instance=ExtResource("8_ocx0m")]
spring_stiffness = 15000.0
damper_stiffness = 500.0
wheel_mesh_resource = ExtResource("6_d06o3")

[node name="WheelMesh" parent="WheelRRDummy/WheelRR" index="0"]
mesh = ExtResource("6_d06o3")

[node name="BonnetDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.072, 1.083, 0)

[node name="BootDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.499, 1.654, 0)

[node name="SteeringWheelDummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.31, 1.061, -0.356)

[node name="VehicleCameras" parent="." instance=ExtResource("4_t40ri")]

[node name="CentreOfMassVisual" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)

[editable path="DoorFLDummy/DoorFL"]
[editable path="DoorFRDummy/DoorFR"]
[editable path="DoorRLDummy/DoorRL"]
[editable path="DoorRRDummy/DoorRR"]
[editable path="WheelFLDummy/WheelFL"]
[editable path="WheelFRDummy/WheelFR"]
[editable path="WheelRLDummy/WheelRL"]
[editable path="WheelRRDummy/WheelRR"]
